--- a/src/component/Home/Home.css
+++ b/src/component/Home/Home.css
@@ -1,24 +1,8 @@
 .home{
-    background: #b6b6b6;
+    background: #000000;
     padding: 30px;
     box-sizing: border-box;
     color: #ffffff;
-}
-.search-sec{
-    width: 100%;
-    text-align: center;
-}
-.search-sec input{
-    width: 90%;
-    margin: 0 auto;
-    padding: 10px;
-    box-sizing: border-box;
-    border-radius: 50px;
-    border: none;
-    outline: none;
-    font-size: 15px;
-    padding: 10px 15px;
-    font-family: sans-serif;
 }
 .main-sec{
     margin-top: 40px;
